--- a/BMS/BMS.vcxproj.filters
+++ b/BMS/BMS.vcxproj.filters
@@ -64,5 +64,13 @@
     <ClInclude Include="bms.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="BMS.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
