--- a/BMS/BMS.vcxproj.filters
+++ b/BMS/BMS.vcxproj.filters
@@ -46,12 +46,18 @@
     <ClCompile Include="DataCenter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="qcustomplot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="dialog.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="DataCenter.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="qcustomplot.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
