--- a/BMS/BMS.vcxproj.filters
+++ b/BMS/BMS.vcxproj.filters
@@ -79,4 +79,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="images\favicon.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
